testsuite/tests/parser/should_fail/ParserNoLambdaCase.hs
{-# LANGUAGE GHC2021 #-}
module ParserNoLambdaCase where

f = \case "1" -> 1

