testsuite/tests/parser/should_fail/ParserNoLambdaCase.stderr
ParserNoLambdaCase.hs:4:6: error: [GHC-51179]
    Illegal \case
    Suggested fix:
      Perhaps you intended to use the ‘LambdaCase’ extension
